--- a/LifeLineHealthCareSystem/src/main/resources/application.properties
+++ b/LifeLineHealthCareSystem/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #server port
 server.port=2022
+server.port=5000
 
 #Jpa Configurations
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
